--- a/Manto2015_new/build.xml
+++ b/Manto2015_new/build.xml
@@ -121,10 +121,10 @@
     <property name="dist.home"       value="${basedir}/dist"/>
     <property name="test.out.dir"    value="${basedir}/testout"/>
 
-    <property name="catalina.home"    value="C:\xampp\tomcat"/>
+    <property name="catalina.home"    value="C:\apache-tomcat-7.0.57"/>
     <property name="manager.url"      value="http://127.0.0.1:5431/manager/text"/>
-    <property name="manager.username" value="cristian"/>
-    <property name="manager.password" value="helloworld"/>
+    <property name="manager.username" value="isa"/>
+    <property name="manager.password" value="isabela"/>
 
 
 <!-- ================== Custom Ant Task Definitions ================== -->
